--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ endif()
 
 set (CMAKE_CXX_STANDARD 20)
 
-add_compile_options(-Wall -Wextra -O2)
+add_compile_options(-Wall -Wextra)
 
 set (OFFLINE_LCA_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/lib/include)
 
